--- a/src/application/OpenAPT.fxml
+++ b/src/application/OpenAPT.fxml
@@ -3,7 +3,6 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ChoiceBox?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.ListView?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.effect.DropShadow?>
 <?import javafx.scene.layout.AnchorPane?>
@@ -19,14 +18,14 @@
                   <Font size="20.0" />
                </font>
             </Label>
-            <Label fx:id="typeLabel" layoutX="259.0" layoutY="402.0" text="TYPE OF NET">
+            <Label fx:id="typeLabel" layoutX="262.0" layoutY="156.0" text="OPTIONS">
                <font>
                   <Font size="18.0" />
                </font>
                <effect>
                   <DropShadow />
                </effect></Label>
-            <ChoiceBox fx:id="typeChoiceBox" layoutX="235.0" layoutY="438.0" prefWidth="150.0" />
+            <ChoiceBox fx:id="typeChoiceBox" layoutX="16.0" layoutY="243.0" prefWidth="150.0" />
             <Label fx:id="fileLabel" layoutX="284.0" layoutY="44.0" text="FILE">
                <font>
                   <Font size="18.0" />
@@ -34,17 +33,12 @@
                <effect>
                   <DropShadow />
                </effect></Label>
-            <Button fx:id="selectFileButton" layoutX="248.0" layoutY="313.0" mnemonicParsing="false" onAction="#selectFileButton_OnAction" prefHeight="25.0" prefWidth="103.0" text="Select manually" />
-            <TextField fx:id="fileTextField" layoutX="16.0" layoutY="71.0" prefHeight="25.0" prefWidth="567.0" />
+            <Button fx:id="selectFileButton" layoutX="249.0" layoutY="71.0" mnemonicParsing="false" onAction="#selectFileButton_OnAction" prefHeight="25.0" prefWidth="103.0" text="Select manually" />
+            <TextField fx:id="fileTextField" layoutX="16.0" layoutY="103.0" prefHeight="25.0" prefWidth="567.0" />
             <Button fx:id="openButton" layoutX="229.0" layoutY="504.0" mnemonicParsing="false" onAction="#openButton_OnAction" prefHeight="40.0" prefWidth="70.0" text="Open" />
             <Button fx:id="closeButton" layoutX="326.0" layoutY="504.0" mnemonicParsing="false" onAction="#closeButton_OnAction" prefHeight="40.0" prefWidth="70.0" text="Close" />
             <Button fx:id="infoAboutNetButton" layoutX="231.0" layoutY="561.0" mnemonicParsing="false" onAction="#infoAboutNetButton_OnAction" prefHeight="25.0" prefWidth="157.0" text="Check info about net" />
-            <Label fx:id="infoLabel" alignment="CENTER" layoutX="162.0" layoutY="477.0" prefHeight="15.0" prefWidth="295.0" text="You need to set type of net as 'coverab' to open net in program." textAlignment="CENTER" wrapText="true">
-               <font>
-                  <Font size="10.0" />
-               </font>
-            </Label>
-            <ListView fx:id="filesListView" layoutX="125.0" layoutY="100.0" prefHeight="200.0" prefWidth="350.0" />
+            <Label fx:id="label1" layoutX="44.0" layoutY="215.0" text="Convert a Petri net or LTS to the Dot format used by Graphviz" />
          </children>
       </Pane>
    </children>
