--- a/src/application/OpenAPT.fxml
+++ b/src/application/OpenAPT.fxml
@@ -3,6 +3,7 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ChoiceBox?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.ListView?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.effect.DropShadow?>
 <?import javafx.scene.layout.AnchorPane?>
@@ -25,7 +26,6 @@
                <effect>
                   <DropShadow />
                </effect></Label>
-            <ChoiceBox fx:id="typeChoiceBox" layoutX="224.0" layoutY="183.0" prefWidth="150.0" />
             <Label fx:id="fileLabel" layoutX="284.0" layoutY="44.0" text="FILE">
                <font>
                   <Font size="18.0" />
@@ -38,14 +38,15 @@
             <Button fx:id="openButton" layoutX="229.0" layoutY="504.0" mnemonicParsing="false" onAction="#openButton_OnAction" prefHeight="40.0" prefWidth="70.0" text="Open" />
             <Button fx:id="closeButton" layoutX="326.0" layoutY="504.0" mnemonicParsing="false" onAction="#closeButton_OnAction" prefHeight="40.0" prefWidth="70.0" text="Close" />
             <Button fx:id="infoAboutNetButton" layoutX="231.0" layoutY="561.0" mnemonicParsing="false" onAction="#infoAboutNetButton_OnAction" prefHeight="25.0" prefWidth="157.0" text="Check info about net" />
-            <Label fx:id="descriptionLabel" alignment="CENTER" contentDisplay="CENTER" layoutX="16.0" layoutY="254.0" prefHeight="56.0" prefWidth="567.0" />
-            <Label fx:id="descTextLabel" layoutX="245.0" layoutY="227.0" text="DESCRIPTION">
+            <Label fx:id="descriptionLabel" alignment="CENTER" contentDisplay="CENTER" layoutX="17.0" layoutY="410.0" prefHeight="56.0" prefWidth="567.0" />
+            <Label fx:id="descTextLabel" layoutX="244.0" layoutY="383.0" text="DESCRIPTION">
                <font>
                   <Font size="18.0" />
                </font>
                <effect>
                   <DropShadow />
                </effect></Label>
+            <ListView fx:id="options1ListView" layoutX="14.0" layoutY="183.0" prefHeight="200.0" prefWidth="200.0" />
          </children>
       </Pane>
    </children>
