--- a/src/application/OpenAPT.fxml
+++ b/src/application/OpenAPT.fxml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.CheckBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ListView?>
 <?import javafx.scene.control.TextField?>
@@ -9,9 +10,9 @@
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="600.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.OpenAPTController">
+<AnchorPane prefHeight="700.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.OpenAPTController">
    <children>
-      <Pane prefHeight="600.0" prefWidth="600.0">
+      <Pane prefHeight="700.0" prefWidth="600.0">
          <children>
             <Label fx:id="headLabel" layoutX="162.0" layoutY="14.0" text="Modify this pane to open APT file">
                <font>
@@ -34,11 +35,11 @@
                </effect></Label>
             <Button fx:id="selectFileButton" layoutX="249.0" layoutY="71.0" mnemonicParsing="false" onAction="#selectFileButton_OnAction" prefHeight="25.0" prefWidth="103.0" text="Select manually" />
             <TextField fx:id="fileTextField" layoutX="16.0" layoutY="103.0" prefHeight="25.0" prefWidth="567.0" />
-            <Button fx:id="openButton" layoutX="229.0" layoutY="504.0" mnemonicParsing="false" onAction="#openButton_OnAction" prefHeight="40.0" prefWidth="70.0" text="Open" />
-            <Button fx:id="closeButton" layoutX="326.0" layoutY="504.0" mnemonicParsing="false" onAction="#closeButton_OnAction" prefHeight="40.0" prefWidth="70.0" text="Close" />
-            <Button fx:id="infoAboutNetButton" layoutX="231.0" layoutY="561.0" mnemonicParsing="false" onAction="#infoAboutNetButton_OnAction" prefHeight="25.0" prefWidth="157.0" text="Check info about net" />
-            <Label fx:id="descriptionLabel" alignment="CENTER" contentDisplay="CENTER" layoutX="17.0" layoutY="410.0" prefHeight="56.0" prefWidth="567.0" />
-            <Label fx:id="descTextLabel" layoutX="244.0" layoutY="383.0" text="DESCRIPTION">
+            <Button fx:id="openButton" layoutX="220.0" layoutY="615.0" mnemonicParsing="false" onAction="#openButton_OnAction" prefHeight="40.0" prefWidth="70.0" text="Open" />
+            <Button fx:id="closeButton" layoutX="309.0" layoutY="615.0" mnemonicParsing="false" onAction="#closeButton_OnAction" prefHeight="40.0" prefWidth="70.0" text="Close" />
+            <Button fx:id="infoAboutNetButton" layoutX="220.0" layoutY="661.0" mnemonicParsing="false" onAction="#infoAboutNetButton_OnAction" prefHeight="25.0" prefWidth="157.0" text="Check info about net" />
+            <Label fx:id="descriptionLabel" alignment="CENTER" contentDisplay="CENTER" layoutX="15.0" layoutY="491.0" prefHeight="75.0" prefWidth="567.0" />
+            <Label fx:id="descTextLabel" layoutX="246.0" layoutY="464.0" text="DESCRIPTION">
                <font>
                   <Font size="18.0" />
                </font>
@@ -47,6 +48,11 @@
                </effect></Label>
             <ListView fx:id="options1ListView" layoutX="14.0" layoutY="183.0" prefHeight="200.0" prefWidth="200.0" />
             <ListView fx:id="options2ListView" layoutX="383.0" layoutY="183.0" prefHeight="200.0" prefWidth="200.0" />
+            <TextField fx:id="secondFileTextField" layoutX="14.0" layoutY="402.0" prefHeight="25.0" prefWidth="567.0" />
+            <Button fx:id="secondFileButton" layoutX="246.0" layoutY="371.0" mnemonicParsing="false" onAction="#secondFileButton_OnAction" text="Select second file" />
+            <CheckBox fx:id="optionalValueCheckBox" layoutX="241.0" layoutY="183.0" mnemonicParsing="false" text="add optional value" />
+            <TextField fx:id="optionalValueTextField" layoutX="223.0" layoutY="200.0" />
+            <Label fx:id="optionalInfoLabel" alignment="TOP_LEFT" layoutX="224.0" layoutY="238.0" prefHeight="40.0" prefWidth="309.0" />
          </children>
       </Pane>
    </children>
