--- a/src/application/PetriInfo.fxml
+++ b/src/application/PetriInfo.fxml
@@ -2,6 +2,8 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.TextArea?>
+<?import javafx.scene.effect.Blend?>
+<?import javafx.scene.effect.SepiaTone?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.Pane?>
 
@@ -9,8 +11,22 @@
    <children>
       <Pane fx:id="mainPane" prefHeight="700.0" prefWidth="600.0">
          <children>
-            <Button fx:id="copyButton" layoutX="177.0" layoutY="661.0" mnemonicParsing="false" onAction="#copyButton_OnAction" text="Copy message" />
-            <Button fx:id="closeButton" layoutX="340.0" layoutY="661.0" mnemonicParsing="false" onAction="#closeButton_OnAction" text="Close" />
+            <Button fx:id="copyButton" layoutX="150.0" layoutY="650.0" mnemonicParsing="false" onAction="#copyButton_OnAction" prefHeight="40.0" prefWidth="150.0" text="Copy to clipboard">
+               <effect>
+                  <SepiaTone>
+                     <input>
+                        <Blend mode="MULTIPLY" />
+                     </input>
+                  </SepiaTone>
+               </effect></Button>
+            <Button fx:id="closeButton" layoutX="340.0" layoutY="650.0" mnemonicParsing="false" onAction="#closeButton_OnAction" prefHeight="40.0" prefWidth="70.0" text="Close">
+               <effect>
+                  <SepiaTone>
+                     <input>
+                        <Blend mode="MULTIPLY" />
+                     </input>
+                  </SepiaTone>
+               </effect></Button>
             <TextArea fx:id="messageTextArea" layoutX="14.0" layoutY="14.0" prefHeight="631.0" prefWidth="572.0" />
          </children>
       </Pane>
